--- a/style.css
+++ b/style.css
@@ -53,3 +53,33 @@ body {
     height: 200px;
     cursor: grab;
 }
+
+.feedback-container {
+    position: absolute;
+    bottom: 10px;
+    right: 10px;
+    display: flex;
+    gap: 5px;
+}
+
+.feedback-dot {
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    background-color: #ccc;
+}
+
+.groot-scherm-img {
+    width: auto;
+    height: 80%;
+}
+
+.drag-box-img {
+    max-width: 100%;
+    height: auto;
+    cursor: grab;
+}
+
+#timeline img {
+    margin: 30px;
+}
