--- a/style.css
+++ b/style.css
@@ -16,13 +16,10 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    background-color: #ffffff;
     position: relative;
 }
-.grootScherm {
-    background-color: #f0f0f0;
-}
 .touchScreen {
-    background-color: #d0d0d0;
     flex-direction: column;
 }
 .timeline {
@@ -31,15 +28,15 @@ body {
     align-items: center;
     margin-top: 20px;
     position: relative;
-    width: 100%;
+    width: 1880px;
     overflow: hidden;
     height: 200px;
     border: 2px solid #888;
 }
 .timeline img {
-    width: 120px;
-    height: 120px;
-    margin: 0 10px;
+    width: 155px;
+    height: 155px;
+    margin: 0 15px;
 }
 
 /* Fade-in effect */
@@ -59,8 +56,8 @@ body {
 }
 
 #dragBox {
-    width: 500px;
-    height: 500px;
+    width: 400px;
+    height: 400px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -74,17 +71,18 @@ body {
 
 .feedback-container {
     position: absolute;
-    bottom: 10px;
-    right: 10px;
+    bottom: 20px;
+    right: 20px;
     display: flex;
     gap: 5px;
 }
 
 .feedback-dot {
-    width: 20px;
-    height: 20px;
+    width: 30px;
+    height: 30px;
     border-radius: 50%;
-    background-color: #ccc;
+    margin: 5px;
+    background-color: #bfc6be;
 }
 
 .groot-scherm-img {
@@ -98,12 +96,15 @@ body {
     cursor: grab;
 }
 
-#timeline img {
-    margin: 30px;
-}
-
 #popup {
     background-color: lightgoldenrodyellow;
     position: absolute;
     z-index: 100;
+}
+
+#home {
+    height: 60px;
+    position: absolute;
+    left: 20px;
+    bottom: 20px;
 }
